<resources>
    <string name="app_name">WithFriends</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage">Homepage</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Login">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="password">password</string>
    <string name="email">      email      </string>
    <string name="Register">Register</string>
    <string name="register">register</string>
    <string name="confirm">confirm</string>
    <string name="max">max</string>
    <string name="if_you_forgot_your_password_click_here">If you forgot your password click here</string>
    <string name="reset">reset</string>
</resources>