<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <Button
            android:id="@+id/loginButton"
            android:layout_width="115dp"
            android:layout_height="58dp"
            android:text="@string/Login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#2196F3"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintHorizontal_bias="0.51" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/TextPassword"/>
    <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textColor="#00BCD4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/email"/>
    <Button
            android:id="@+id/registerButton"
            android:layout_width="114dp"
            android:layout_height="57dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#2196F3" app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginBottom="160dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
    <EditText
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/TextPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="Password" tools:ignore="LabelFor" app:layout_constraintHorizontal_bias="0.507"
            android:hint="@string/password"
            android:textColorHint="#DA618787"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            android:layout_marginBottom="68dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/email"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="301dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout" tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="216dp"
            android:layout_height="52dp"
            android:hint="@string/email" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:id="@+id/email" android:textColorHint="#D8698687" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="36dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/TextPassword"/>
    <TextView
            android:text="@string/if_you_forgot_your_password_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resetButton"
            android:background="@null"  android:backgroundTint="#FFFFFF"
            android:hapticFeedbackEnabled="false" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>