<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

    <Button
            android:id="@+id/confirmButton"
            android:layout_width="115dp"
            android:layout_height="58dp"
            android:text="@string/confirm"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#2196F3"
            app:layout_constraintBottom_toTopOf="@+id/registerButton" app:layout_constraintVertical_bias="0.863"
            app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textColor="#00BCD4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"/>
    <Button
            android:id="@+id/registerButton"
            android:layout_width="114dp"
            android:layout_height="57dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#2196F3" app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginBottom="160dp"/>
    <EditText
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/TextPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="Password" tools:ignore="LabelFor" app:layout_constraintHorizontal_bias="0.507"
            android:hint="@string/password"
            android:textColorHint="#DA618787"
            app:layout_constraintBottom_toTopOf="@+id/loginButton2" app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.691"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="301dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout" tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="216dp"
            android:layout_height="52dp"
            android:hint="@string/email" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintBottom_toTopOf="@+id/TextPassword" app:layout_constraintVertical_bias="0.444"
            android:id="@+id/email" android:textColorHint="#D8698687" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/TextPassword"
            app:layout_constraintBottom_toTopOf="@+id/confirmButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>